--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>tinyasm</groupId>
+	<groupId>com.github.ByronWang</groupId>
 	<artifactId>tinyasm-tool</artifactId>
 	<version>${tinyasm.version}</version>
 	<name>tinyasm-tool</name>
@@ -14,7 +14,7 @@
 		<!-- Startup class -->
 		<jacoco.version>0.8.6</jacoco.version>
 		<junit.version>4.13.1</junit.version>
-		<tinyasm.version>0.1.1-SNAPSHOT</tinyasm.version>
+		<tinyasm.version>0.2.0</tinyasm.version>
 		<slf4j.version>1.7.25</slf4j.version>
 		<mockito.version>1.10.19</mockito.version>
 		<guava.version>19.0</guava.version>
@@ -31,11 +31,11 @@
 		</repository>
 	</repositories>
 	<dependencies>
-	<dependency>
+<!-- 	<dependency>
 	    <groupId>com.github.ByronWang</groupId>
 	    <artifactId>tinyasm-core</artifactId>
 	    <version>0.2.0</version>
-	</dependency>
+	</dependency> -->
 		<!-- LOG -->
 		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 		<dependency>
