--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.ByronWang</groupId>
+	<groupId>com.github.1sj-cc</groupId>
 	<artifactId>tinyasm-tool</artifactId>
 	<version>${tinyasm.version}</version>
 	<name>tinyasm-tool</name>
